--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,29 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body><!-- Display Flash Messages -->
+    <% if notice %>
+      <p class="notice"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+      <p class="alert"><%= alert %></p>
+    <% end %>
+
+    <!-- User Authentication Links -->
+    <% if user_signed_in? %>
+      <p>
+        Logged in as <%= current_user.email %>. 
+        <%= link_to "Edit Profile", edit_user_registration_path %> |
+        <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+      </p>
+    <% else %>
+      <p>
+        <%= link_to "Sign In", new_user_session_path %> |
+        <%= link_to "Sign Up", new_user_registration_path %>
+      </p>
+    <% end %>
+
+    <!-- Main Content -->
     <%= yield %>
   </body>
 </html>
