--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,8 @@
       <p>
         Logged in as <%= current_user.email %>. 
         <%= link_to "Edit Profile", edit_user_registration_path %> |
-        <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+        <%= button_to "Sign Out", destroy_user_session_path, method: :delete %>
+
       </p>
     <% else %>
       <p>
