--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,14 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body><!-- Display Flash Messages -->
+  <body class ="bg-light">
+     
+  <header>
+    
+    <div class="logo">
+    <%= link_to "Home", root_path, class: 'btn btn-primary' %>
+    </div>
+    <!-- Display Flash Messages -->
     <% if notice %>
       <p class="notice"><%= notice %></p>
     <% end %>
@@ -26,21 +33,25 @@
     <% end %>
 
     <!-- User Authentication Links -->
+    <div class="devise-links">
     <% if user_signed_in? %>
-      <p>
-        Logged in as <%= current_user.email %>. 
-        <%= button_to "Edit Profile", edit_user_registration_path %> |
+      <p >
+        Logged in as <%= current_user.email %> 
+        <%= button_to "Edit Profile", edit_user_registration_path ,class: 'btn btn-primary'  %> 
         <%= button_to "Sign Out", destroy_user_session_path, method: :delete %>
 
       </p>
     <% else %>
       <p>
-        <%= button_to "Sign In", new_user_session_path %> |
-        <%= button_to "Sign Up", new_user_registration_path %>
+        <%= button_to "Sign In", new_user_session_path, class: 'btn btn-primary' %> 
+        <%= link_to "Sign up", new_user_registration_path, class: 'btn btn-primary' %>
       </p>
     <% end %>
-
+    </div>
+  </header>
     <!-- Main Content -->
+    <div class= "container">
     <%= yield %>
+    </div>
   </body>
 </html>
