--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -286,7 +286,7 @@ color: blue;
 }
 
 body.bg-light {
-  background-image: url('/assets/b2.jpeg');
+  background-image: url('/assets/bulin_sales.jpg');
   background-size: cover; /* Ensures the image covers the entire background */
   /*background-repeat: no-repeat; /* Prevents the image from repeating */
   background-position: center; /* Centers the image */
@@ -296,7 +296,7 @@ body.bg-light {
 /* Header Styles */
 header {
   background-color: var(--primary-blue); /* Fallback color */
-  background-image: url('/assets/header.jpg'); /* Path to your background image */
+  background-image: url('/assets/bulin_sales.jpg'); /* Path to your background image */
   background-size: cover; /* Makes the image cover the entire header */
   background-position: center; /* Centers the background image */
   color: white;
