--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -3,7 +3,7 @@
 <%= form_with model: [ post, Comment.new ] do |form|%>
 
     <%= form.text_area :content, size: "20x5" %>
-    <%= form.submit%>
+    <%= form.submit "Create comment", class: "btn btn-primary"%>
 
 <% end%>
 </div>
