--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= content_for(:title) || "AzconaCars" %></title>
+    <title><%= content_for(:title) || "BulinAutoSales" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="turbo-cache-control" content="no-cache">
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= yield :head %>
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+     <!-- Add Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
+   <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/icon.png" type="image/png">
-    <link rel="icon" href="/icon.svg" type="image/svg+xml">
+    <link rel="icon" href="<%= asset_path('bulin_sales.jpg')%>?v=1" type="image/jpeg">
     <link rel="apple-touch-icon" href="/icon.png">
+      <%= stylesheet_link_tag 'trix' %>
+      <%= javascript_include_tag 'trix' %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
@@ -20,10 +27,8 @@
   <body class ="bg-light">
      
   <header>
-    
     <div class="button-container">
-
-    <%= link_to "Home", root_path, class: 'home-button button link-button' %>
+    <%= link_to "Home", root_path, class: 'home-button button link-button cool-text' %>
     </div>
     <!-- Display Flash Messages -->
     <% if notice %>
@@ -38,12 +43,12 @@
     <% if user_signed_in? %>
         User <%= current_user.email %> 
         <div class= "button-container">
-        <%= button_to "Edit Profile", edit_user_registration_path ,class: 'button link-button'  %> 
-        <%= button_to "Sign Out", destroy_user_session_path,class: 'button link-button', method: :delete %>
+        <%= link_to "Edit Profile", edit_user_registration_path ,class: 'button link-button'  %> 
+        <%= link_to "Sign Out", destroy_user_session_path,class: 'button link-button', method: :delete %>
         </div>
     <% else %>
         <div class= "button-container">
-        <%= button_to "Sign In", new_user_session_path, class: 'button link-button' %> 
+        <%= link_to "Sign In", new_user_session_path, class: 'button link-button' %> 
         <%= link_to "Sign up", new_user_registration_path,  class: "button link-button" %>
         </div>
     <% end %>
