--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,58 +1,67 @@
 <p style="color: green"><%= notice %></p>
 
-<% content_for :title, "Posts" %>
-
+<% content_for :title, "BulinAuto" %>
 
 <%# Add buttons to the top of the page %>
-<div class="filters-form">
-<%= form_with(url: posts_path, method: :get, local: true, html: {class: "filter-form"}) do %>
-  <!-- Post Title Filter -->
+<div>
+  <%= form_with(url: posts_path, method: :get, local: true, html: {class: "filter-form"}) do %>
+    <!-- Post Title Filter -->
+    <!-- Car Make Filter -->
+    <div class="field">
+      <%= label_tag :make, "Make" %>
+      <%= text_field_tag :make, params[:make] %>
+    </div>
 
-  <!-- Car Make Filter -->
-  <div class= "field">
-    <%= label_tag :make, "Make" %>
-    <%= text_field_tag :make, params[:make] %>
-  </div>
+    <!-- Car Price Filter -->
+    <div class="field">
+      <%= label_tag :max_price, "Max Price" %>
+      <%= number_field_tag :price, value: params[:max_price], step: "any" %>
+    </div>
 
-  <!-- Car Price Filter -->
-  <div class= "field">
-    <%= label_tag :max_price, "Max Price" %>
-    <%= number_field_tag :price, value: params[:max_price], step: "any" %>
-  </div>
+    <!-- Car VIN Filter -->
+    <div class="field">
+      <%= label_tag :vin, "VIN" %>
+      <%= text_field_tag :vin, params[:vin] %>
+    </div>
 
-  <!-- Car VIN Filter -->
-  <div class= "field">
-    <%= label_tag :vin, "VIN" %>
-    <%= text_field_tag :vin, params[:vin] %>
-  </div>
-
-  <div class= "button-container">
-    <%= submit_tag "Filter Posts", class: "button link-button"%>
-   <%= link_to 'Reset Filters', posts_path, class: 'button link-button' %>
-  </div>
-<% end %>
-</div>
-<% if current_user&.admin? %>
-  <div class= "button-container">
-  <%= link_to 'Create New Post', new_post_path, class: 'button link-button' %>
-  </div>
-<% end%>
-<div class="container">
-<div class= "posts-grid">
-  <% if @posts.any?%>
-  <% @posts.each do |post| %>
-    <div class = "post-card">
-    <%= render post %>
-    <p>Price: $<%= post.car.price %></p>
-      <div class= "button-container">
-      
-      <%= link_to "View Details", post, class: "button link-button" %>
-      </div>
-    </p>
+    <div class="button-container">
+      <%= submit_tag "Filter Posts", class: "button link-button" %>
+      <%= link_to 'Reset Filters', posts_path, class: 'button link-button' %>
     </div>
   <% end %>
-  <%else %>
-      <p class="no-results-message">There are no cars available
-    <% end%>
 </div>
+
+<% if current_user&.admin? %>
+  <div class="button-container">
+    <%= link_to 'Create New Post', new_post_path, class: 'button link-button' %>
+  </div>
+<% end %>
+
+<div class="post-container">
+  <div class="posts-grid">
+    <% if @posts.any? %>
+      <% @posts.each do |post| %>
+        <div class="post-card">
+          <!-- Front Side -->
+          <div class="front">
+            <%=  post.title%>
+            <p>
+            Posted <%= time_tag post.created_at, "data-local": "time-ago"%>
+            </p>
+             <% if post.images.any? %>
+             <p><%= image_tag(post.images.first, class: "post-image", alt: "Post image") %> </p>
+             <%end%>
+            <p>Price: $<%= post.car.price %></p>
+          </div>
+
+          <!-- Back Side with Details Button -->
+          <div class="back">
+            <%= link_to "View Details", post, class: "details-button" %>
+          </div>
+        </div>
+      <% end %>
+    <% else %>
+      <p class="no-results-message">Sorry, no cars match that filter!</p>
+    <% end %>
+  </div>
 </div>
