--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,7 @@
   <% if current_user&.admin? %>
     <%= link_to "Edit this post", edit_post_path(@post), class: "button link-button" %> |
   <% end%>
-  <%= link_to "Back to posts", posts_path, class: "button link-button" %>
+  <%= link_to "Back to posts", posts_path, class: "btn link-button" %>
   <% if current_user&.admin? %>
   
     <%= button_to "Destroy this post", @post, method: :delete , class: "button link-button"%>
