--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -352,7 +352,7 @@ color: blue;
 }
 
 body.bg-light {
-  background-image: image-url('bulin_sales.jpg'); /* Path to your background image */
+  background-image: url('/assets/bulin_sales.jpg'); /* Path to your background image */
   background-size: cover; /* Ensures the image covers the entire background */
   background-repeat: no-repeat; /* Prevents the image from repeating */
   background-position: center; /* Centers the image */
