--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
         User <%= current_user.email %> 
         <div class= "button-container">
         <%= link_to "Edit Profile", edit_user_registration_path ,class: 'button link-button'  %> 
-        <%= link_to "Sign Out", destroy_user_session_path,class: 'button link-button', method: :delete %>
+        <%= button_to "Sign Out", destroy_user_session_path,class: 'button link-button', method: :delete %>
         </div>
     <% else %>
         <div class= "button-container">
